2008-03-10  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/cifformat.cpp: export space group if known.
	* src/formats/xml/cdxmlformat.cpp: removed a printf debug instruction.

2008-03-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Fixes from Craig James. Allow ring closure
	bonds in SMILES to be aromatic. Also check for ring closures in
	ParseComplex.

	* test/files/aromatics.smi: Add test for ring closure bug above.

2008-03-10  Noel O'Boyle <baoilleach@gmail.com>
	
	* test/cmlreadfile.cpp: Commented out the failing test. This is a
	minor bug on Linux.

2008-03-09  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/gausscubeformat.cpp: Read/write multiple cubes. Always
	write in bohr. More error checking in write might be needed.

2008-03-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/mol.h, src/mol.cpp: GetEnergy(int) and GetEnergies 
	now use OBConformerData to hold the energies.

	* include/openbabel/forcefield.h, src/forcefield.cpp: GetConformers
	and GetCoordinates attatches OBConformerData to the molecule. Energies
	and Forces are set.

	* src/forcefields/forcefieldmmff94.*: minimize the number of calls to
	atoi(GetType, ...) in Setup functions. Use OBBitVec class to replace
	vector<int> where possible.

2008-03-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: The recent patch from Liu Zhiguo had a bug in
	OBMol::ConnectTheDots(). Inside a loop, NextBond was called without
	checking the return value directly. The return value was being checked
	outside the loop.
	
	while (valCount < bondCount[atom->GetIdx() - 1]) {
	  maxbond = atom->NextBond(l);
	  ...
	  if (!maxbond) // Added
	    break;      // Added
	  valCount++;
	}
	if (!maxbond)
	  break;

2008-03-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/parsmart.cpp: Add protection against double-free
	bugs. Assign pointers to NULL. Addresses bug reported from 
	Avogaro PR#1897745.
